k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ashram-shala
  labels:
    app: ashram-shala-pathraj
