k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ashram-shala-pathraj
  namespace: ashram-shala
  labels:
    app: ashram-shala-pathraj
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: ashram-shala-pathraj
